Edit home page for see the button delete / edit / add tricks only when you are connected

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -92,14 +92,14 @@
 {% endblock %}
 <div id="wrapper">
 
-
     {% block body %}
     {% endblock %}
     {% block footer %}
-        <div class="content-block" id="footer">
+
+        <div class="content-block"  id="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-4 blog-post">
+                    <div class="col-sm-6 blog-post">
 
                         <h2 class="footer-block">Une question?</h2>
                         <p>Site communautaire de partage de figures du snowboard.</p>
@@ -108,74 +108,25 @@
                             but d'apprentisage.
                         </p>
                     </div>
-                    <div class="col-sm-4 blog-post">
-                        <h2 class="footer-block">Laissez nous un message</h2>
-                        <form action="contact-form.php" id="contactForm" method="post" name="contactform" class=""
-                              role="form">
-                            <div class="form-group">
-                                <input type="text" class="form-control form-control-white" id="name" name="name"
-                                       placeholder="Nom" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control form-control-white" id="email" name="email"
-                                       placeholder="E-mail" required>
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control form-control-white" id="message" name="massage"
-                                          placeholder="Ecrire quelque chose.." required></textarea>
-                            </div>
-                            <div id="contactFormResponse"></div>
-                            <div class="form-group">
-                                <input id="cfsubmit" type="submit" class="text-center btn btn-o-white"
-                                       value="Envoyé">
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-sm-4 blog-post">
+
+                    <div class="col-sm-6 blog-post">
 
                         <h2 class="footer-block">Contact</h2>
                         <ul>
-                            <li class="address-sub"><i class="fa fa-map-marker"></i>Addresse</li>
-                            <p>
-                                Blabla Parkway, P.o Box 353 Mountain View. United States of America.
-                            </p>
-                            <li class="address-sub"><i class="fa fa-phone"></i>Téléphone</li>
-                            <p>
-                                fix : 1-800-123-hello<br>
-                                Mobile: 1-800-123-hello
-                            </p>
-                            <li class="address-sub"><i class="fa fa-envelope-o"></i>E-mail</li>
+                            <li class="address-sub"><i class="fa fa-home"></i>Site web</li>
                             <p>
                                 <a href="https://johanberg.fr/">https://johanberg.fr//</a>
                             </p>
 
 
                         </ul>
-                        <div class="social">
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-skype"></i></a>
-                        </div>
-
 
                     </div>
                 </div>
             </div>
+    </div>
         </div>
-        <div class="content-block footer-bottom" id="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-6">&copy; Copyright <a href="https://johanberg.fr/" target="_blink">Johan B.
-                    </div>
-                </div>
-            </div>
-        </div><!-- #footer -->
-    {% endblock %}
-
-</div><!--/#wrapper-->
+    {% endblock %} <!-- #footer -->
 
 {% block javascripts %}
     <script src="{{ asset('assets/js/jquery-2.1.3.min.js') }}"></script>
@@ -207,6 +158,26 @@
         });
     </script>
 {% endblock %}
+
+{% for message in app.flashes('success') %}
+    <script type="text/javascript">
+        jQuery( document ).ready(function() {
+            jQuery('#modal_alert').modal('toggle')
+        });
+    </script>
+    <div id="modal_alert" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-body">
+                    <p>{{ message }}.</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+{% endfor %}
 
 </body>
 </html>
