--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -206,7 +206,7 @@
 </svg>
 <div class="content">
     <h3>Allo ?! Il y a quelqu'un ?!?</h3>
-    <p>Je sais qu'une erreur 404  peut être effrayante.... Peut être juste une mauvais  <strike>rêve</strike> lien?</p>
+    <p>Je sais qu'une erreur 404  peut être effrayante.... Peut être juste un mauvais  <strike>rêve</strike> lien?</p>
     <p>Retour en page <a href=" {{ path('index') }} ">d'accueil</a> </p>
 </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js'></script>
