Change text for french spelling. Add awesome menu in mobile for correspond to wireframe add hidden classic menu

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,7 +32,25 @@
     {% endblock %}
 </head>
 <body>
+<div class="mobilemenu">
+    <li class="nav-item">
+        <a href="{{ path('index') }}"><i class="fa fa-home"></i> </a>
+        <a href="{{ path('index') }}"><i class="fa fa-tasks"></i> </a>
+
+        {% if not app.user %}
+        <a href="{{ path('security_registration') }}"><i class="fa fa-user-plus"></i> </a>
+        <a href="{{ path('security_login') }}"><i class="fa fa-sign-in"></i> </a>
+    </li>
+    {% else %}
+        <a href="{{ path('compteuser') }}"><i class="fa fa-gear"></i></a>
+        <a href="{{ path('security_logout') }}"><i class="fa fa-sign-out"></i></a>
+        </li>
+
+    {% endif %}
+</div>
 {% block header %}
+
+
     <header class="top-header">
         <div class="container">
             <div class="row">
@@ -42,23 +60,14 @@
                         <h1 class="logo">Snowtricks <span class="logo-head"></span></h1>
                     </a>
                 </div>
-
                 <div class="col-md-8 col-md-offset-1 col-xs-7">
                     <nav class="navbar navbar-default">
                         <div class="container-fluid nav-bar">
                             <!-- Brand and toggle get grouped for better mobile display -->
-                            <div class="navbar-header">
-                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                                        data-target="#bs-example-navbar-collapse-1">
-                                    <span class="sr-only">Toggle navigation</span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                </button>
-                            </div>
+
 
                             <!-- Collect the nav links, forms, and other content for toggling -->
-                            <div class="collapse navbar-collapse navbar-def" id="bs-example-navbar-collapse-1">
+                            <div class="  navbar-def" id="bs-example-navbar-collapse-1">
 
                                 <ul class="nav navbar-nav navbar-right">
                                     <li class="nav-item">
@@ -67,18 +76,19 @@
                                     <li>
                                         <a href="{{ path('index') }}"><i class="fa fa-tasks"></i> Tricks</a>
                                     </li>
-                                    <li class="nav-item">
-                                        <a href="{{ path('security_registration') }}"><i class="fa fa-bookmark"></i> Inscription</a>
-                                    </li>
                                     {% if not app.user %}
+                                    <li class="nav-item">
+                                        <a href="{{ path('security_registration') }}"><i class="fa fa-user-plus"></i> Inscription</a>
+                                    </li>
                                         <li class="nav-item">
-                                            <a href="{{ path('security_login') }}"><i class="fa fa-bookmark"></i> Connexion</a>
-
+                                            <a href="{{ path('security_login') }}"><i class="fa fa-sign-in"></i> Connexion</a>
                                         </li>
                                     {% else %}
+                                        <li>
+                                            <a href="{{ path('compteuser') }}"><i class="fa fa-gear"></i> mon compte ({{ app.user.username }}</a>
+                                        </li>
                                         <li class="nav-item">
-                                            <a href="{{ path('security_logout') }}"><i class="fa fa-bookmark"></i> Déconnexion</a>
-
+                                            <a href="{{ path('security_logout') }}"><i class="fa fa-sign-out"></i> Déconnexion</a>
                                         </li>
                                     {% endif %}
                                 </ul>
@@ -104,8 +114,7 @@
                         <h2 class="footer-block">Une question?</h2>
                         <p>Site communautaire de partage de figures du snowboard.</p>
 
-                        <p>Attention: Le contenu de ce site est fictif mais entièrement fonctionnel, il à été crée dans un
-                            but d'apprentisage.
+                        <p>Attention: Le contenu de ce site est fictif, mais entièrement fonctionnel, il a été créé dans un but d'apprentissage.
                         </p>
                     </div>
 
