--- a/app/Resources/views/emails/reset_password.html.twig
+++ b/app/Resources/views/emails/reset_password.html.twig
@@ -217,7 +217,7 @@
                                             <tr>
                                                 <td valign="top" style="padding-bottom:20px; background-color:#ffffff;">
                                                     <b>Bonjour , merci de cliquer sur le bouton
-                                                        afin de réinisialiser votre mot de passe.
+                                                        afin de réinitialiser votre mot de passe.
                                                 </td>
                                             </tr>
                                             <tr>
@@ -235,7 +235,7 @@
                                                                         <w:anchorlock/>
                                                                         <center>
                                                                             <a href="http://127.0.0.1/SnowTricks/web/app_dev.php/reset_password/{{ user.token }}"
-                                                                               style="background-color:#008000;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;line-height:40px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;">Réinisialiser</a>
+                                                                               style="background-color:#008000;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;line-height:40px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;">Réinitialiser </a>
                                                                             <!--[if mso]>
                                                                             </center>
                                                                             </v:rect>
