--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -12,18 +12,9 @@
                 <nav class="navbar navbar-default">
                     <div class="container-fluid nav-bar">
                         <!-- Brand and toggle get grouped for better mobile display -->
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                                    data-target="#bs-example-navbar-collapse-1">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                        </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse navbar-def" id="bs-example-navbar-collapse-1">
+                        <div class="navbar-def" id="bs-example-navbar-collapse-1">
 
                             <ul class="nav navbar-nav navbar-right">
                                 <li class="nav-item">
@@ -32,20 +23,19 @@
                                 <li>
                                     <a href="{{ path('index') }}"><i class="fa fa-tasks"></i> Tricks</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a href="{{ path('security_registration') }}"><i class="fa fa-bookmark"></i>
-                                        Inscription</a>
-                                </li>
                                 {% if not app.user %}
                                     <li class="nav-item">
-                                        <a href="{{ path('security_login') }}"><i class="fa fa-bookmark"></i> Connexion</a>
-
+                                        <a href="{{ path('security_registration') }}"><i class="fa fa-user-plus"></i> Inscription</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="{{ path('security_login') }}"><i class="fa fa-sign-in"></i> Connexion</a>
                                     </li>
                                 {% else %}
+                                    <li>
+                                        <a href="{{ path('compteuser') }}"><i class="fa fa-gear"></i> mon compte {{ app.user.username }}</a>
+                                    </li>
                                     <li class="nav-item">
-                                        <a href="{{ path('security_logout') }}"><i class="fa fa-bookmark"></i>
-                                            Déconnexion</a>
-
+                                        <a href="{{ path('security_logout') }}"><i class="fa fa-sign-out"></i> Déconnexion</a>
                                     </li>
                                 {% endif %}
                             </ul>
