--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -85,7 +85,7 @@
                                         </li>
                                     {% else %}
                                         <li>
-                                            <a href="{{ path('compteuser') }}"><i class="fa fa-gear"></i> mon compte ({{ app.user.username }}</a>
+                                            <a href="{{ path('compteuser') }}"><i class="fa fa-gear"></i> mon compte {{ app.user.username }}</a>
                                         </li>
                                         <li class="nav-item">
                                             <a href="{{ path('security_logout') }}"><i class="fa fa-sign-out"></i> Déconnexion</a>
