--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -882,6 +882,9 @@ button.navbar-toggle.collapsed {
     }
 
 }
-    
-}
+
+.avatar{color:#fff;background-color:#adb5bd;display:inline-flex;align-items:center;justify-content:center;font-size:1rem;border-radius:50%;height:48px;width:48px}.avatar img{width:100%;border-radius:50%}.avatar+.avatar-content{display:inline-block;margin-left:.75rem}.avatar-lg{width:58px;height:58px;font-size:1.5em}.avatar-sm{width:38px;height:38px;font-size:.765625rem}
+
+.bg-gradient-blue{background:#3369d6 linear-gradient(180deg, #5280dc, #3369d6) repeat-x !important}
+.mr-3,.mx-3{margin-right:1rem !important}
 
