--- a/web/assets/css/style404.css
+++ b/web/assets/css/style404.css
@@ -24,8 +24,7 @@ h3 {
     margin: 0 0 .8rem;
     font-size: 2.625rem; font-weight: 900; line-height: 120%;
 }
-p {
+p {4
     font-size: 1.25rem; font-weight: normal; line-height: 150%; color: #d1e2ed;
-span {text-decoration: line-through;}
-}
+span {text-decoration: line-through}
 }
